--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "next-google-fonts": "^2.2.0",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
