--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "autoprefixer": "10.4.17",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "framer-motion": "^11.0.8",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "next-google-fonts": "^2.2.0",
     "postcss": "8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
