--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "embla-carousel-react": "^8.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "^11.0.8",
@@ -28,6 +29,6 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "daisyui": "^4.7.2"
+    "daisyui": "^4.7.3"
   }
 }
